# game-rs

./: .gitignore  Cargo.toml  rustfmt.toml
engine/: Cargo.toml
engine/src/: game_loop.rs  lib.rs  reloader.rs
engine/src/game_loop/: audio.rs  bmp.rs  input.rs
game/: Cargo.toml
game/src/: entity.rs  lib.rs  math.rs  render.rs  tile.rs  world.rs
game/src/math/: rectangle.rs  v2.rs
runner/: Cargo.toml
runner/src/: game_loop.rs  lib.rs  main.rs  reloader.rs
runner/src/game_loop/: audio.rs  game.rs
src/: host_api.rs  main.rs
