[package]
name = "engine"
version = "0.1.0"
authors = ["Christian De la Hoz <christian.hoz@anixe.pl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libloading = "0.6.3"
notify = "5.0.0-pre.3"
game = { path = "../game" }

[dependencies.sdl2]
features = ["bundled"]
version = "0.34.3"
